--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -55,7 +55,7 @@ und $g(0)=\dfrac{0\cdot 1}{2}=0$\\
 \underline{Quelle:} Wikipedia (Gaußsche Summenformel)\\
 \end{Beweis}
 \begin{Bemerkung}
-Auch ein Beweis durch vollständige Induktion ist möglich, dieser wäre sogar empfehlenswert, da er einfacher durchzuführen ist: (Siehe Kapitel 8)
+Auch ein Beweis durch vollständige Induktion ist möglich, dieser wäre sogar empfehlenswert, da er einfacher durchzuführen ist (Siehe Kapitel 8)
 \end{Bemerkung}
 
 
@@ -81,14 +81,16 @@ $s_{n}=\dfrac{n\cdot(2a_{x}+(n-1)\cdot d)}{2}$
 
 \begin{Beweis}
 Sei eine arithmetische Folge $a$, mit Startglied $a_{x}$ und Differenz $d$, und $s$, die entsprechende Reihe, dann gilt\\
-$s_{n}=a_{x}+a_{x+1}+a_{x+2}+...a_{x+n-1}\\
-=a_{x}+(a_{x}+d)+(a_{x}+2d)+...+(a_{x}+(n-1)\cdot d})\\
-=n\cdot a_{x}+d+2d+...+(n-1)\cdot d\\
-=n\cdot a_{x}+(1+2+...+(n-1))\cdot d\qquad$	(Gauß)\\
-$=n\cdot a_{x}+\dfrac{(n-1)\cdot n}{2}\cdot d\\
-=n\cdot \dfrac{2a_{x}+(n-1)\cdot d}{2}\\
-=n\cdot \dfrac{a_{x}+\overbrace{a_{x}+(n-1)\cdot d}^{a_{x+n-1}}}{2}\\
-=n\cdot \dfrac{a_{x}+a_{x+n-1}}{2}$
+\begin{align*}
+s_n&=a_x+a_{x+1}+a_{x+2}+...a_{x+n-1}\\
+&=a_x+(a_x+d)+(a_{x}+2d)+...+(a_{x}+(n-1)\cdot d)\\
+&=n\cdot a_{x}+d+2d+...+(n-1)\cdot d\\
+&=n\cdot a_{x}+(1+2+...+(n-1))\cdot d\qquad	\text{(Gauß)}\\
+&=n\cdot a_{x}+\dfrac{(n-1)\cdot n}{2}\cdot d\\
+&=n\cdot \dfrac{2a_{x}+(n-1)\cdot d}{2}\\
+&=n\cdot \dfrac{a_{x}+\overbrace{a_{x}+(n-1)\cdot d}^{a_{x+n-1}}}{2}\\
+&=n\cdot \dfrac{a_{x}+a_{x+n-1}}{2}
+\end{align*}
 \end{Beweis}
 
 		\section{Geometrische Reihen}
@@ -108,22 +110,23 @@ $s_{n}=\sum\limits_{i=x}^{n+x-1}a_{i}=a_{x}\cdot \dfrac{1-q^n}{1-q}$
 \end{Bemerkung}
 
 \begin{Beweis}
-\underline{Allgemein:}\\
-\\
-$(1-q)(1+q+q^2+q^3+...+q^n)\\
-=(1\textcolor{red}{-q)+(q}\textcolor{orange}{-q^2)+(q^2}\textcolor{green}{-q^3)+(q^3}\textcolor{brown}{-q^4)+.}.\textcolor{blue}{.+(q^n}-q^{n+1})\\
-=1+(\textcolor{red}{-q+q})+(\textcolor{orange}{-q^2+q^2})+(\textcolor{green}{-q^3+q^3})+...+(\textcolor{blue}{-q^n+q^n})-q^{n+1}\\
-=1-q^{n+1}$\\
-\\
+\underline{Allgemein:}
+\begin{align*}
+(1-q)(1+q+q^2+q^3+...+q^n)&=(1\textcolor{red}{-q)+(q}\textcolor{orange}{-q^2)+(q^2}\textcolor{green}{-q^3)+(q^3}\textcolor{brown}{-q^4)+.}.\textcolor{blue}{.+(q^n}-q^{n+1})\\
+&=1+(\textcolor{red}{-q+q})+(\textcolor{orange}{-q^2+q^2})+(\textcolor{green}{-q^3+q^3})+...+(\textcolor{blue}{-q^n+q^n})-q^{n+1}\\
+&=1-q^{n+1}\\
+\end{align*}
+
 Man hat also $\sum\limits_{k=0}^nq^k=1+q+q^2+q^3+...+q^n=\dfrac{1-q^{n+1}}{1-q}$\\
 Entsprechend ergibt sich $\sum\limits_{k=0}^{n-1}q^k=\underbrace{1+q+q^2+q^3+...+q^{n-1}}_{n\quad Summanden}=\dfrac{1-q^n}{1-q}$\\
 \\
 Somit gilt für eine Reihe $s$, die die Partialsumme einer geometrischen Folge $a$, mit Quotient $q$ und Anfangsglied $a_{x}$, ist, folgendes:\\
-\\
-$s_{n}=\sum\limits_{i=x}^{x+n-1}a_{i}\\
-=a_{x}+a_{x+1}+a_{x+2}+...+a_{x+n-1}\\
-=a_{x}+a_{x}\cdot q+a_{x}\cdot q^{2}+...+a_{x}\cdot q^{n-1}\\
-=a_{x}\cdot(1+q+q^2+...+q^{n-1})\\
-=a_{x}\cdot \sum\limits_{k=0}^{n-1}q^k\\
-=a_{x}\cdot \dfrac{1-q^{n}}{1-q}$
+\begin{align*}
+s_{n}&=\sum\limits_{i=x}^{x+n-1}a_{i}\\
+&=a_{x}+a_{x+1}+a_{x+2}+...+a_{x+n-1}\\
+&=a_{x}+a_{x}\cdot q+a_{x}\cdot q^{2}+...+a_{x}\cdot q^{n-1}\\
+&=a_{x}\cdot(1+q+q^2+...+q^{n-1})\\
+&=a_{x}\cdot \sum\limits_{k=0}^{n-1}q^k\\
+&=a_{x}\cdot \dfrac{1-q^{n}}{1-q}
+\end{align*}
 \end{Beweis}
